force-app/main/default/objects/Case/fields/Onboarding_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Case_Type__c</fullName>
    <label>Onboarding Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Xtend/AP</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>SR Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>