force-app/main/default/objects/Case/fields/OS__c.field-meta.xml
<CustomField>
    <fullName>OS__c</fullName>
    <label>OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>