force-app/main/default/objects/Case/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <label>OS Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OS__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Windows XP</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows Vista</fullName>
            </value>
            <value>
                <fullName>Windows 8.1</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003</fullName>
            </value>
            <value>
                <fullName>Windows Servers 2008</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012</fullName>
            </value>
            <value>
                <fullName>Windows Server 2016</fullName>
            </value>
            <value>
                <fullName>Windows Server 2018</fullName>
            </value>
            <value>
                <fullName>10.7</fullName>
            </value>
            <value>
                <fullName>10.8</fullName>
            </value>
            <value>
                <fullName>10.9</fullName>
            </value>
            <value>
                <fullName>10.11</fullName>
            </value>
            <value>
                <fullName>10.12</fullName>
            </value>
            <value>
                <fullName>10.13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>