force-app/main/default/objects/Case/fields/Owner_ContactID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ContactID__c</fullName>
    <formula>$User.ContactId</formula>
    <label>Owner ContactID</label>
    <type>Text</type>
</CustomField>