force-app/main/default/objects/Case/fields/Playbook_1__c.field-meta.xml
<CustomField>
    <fullName>Playbook_1__c</fullName>
    <label>Playbook 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>