force-app/main/default/objects/Case/fields/Playbook__c.field-meta.xml
<CustomField>
    <fullName>Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Playbook</label>
    <referenceTo>Playbook__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>