force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add/Edit Locations</fullName>
            </value>
            <value>
                <fullName>Add/Edit Providers</fullName>
            </value>
            <value>
                <fullName>Need/Updating Contact Email</fullName>
            </value>
            <value>
                <fullName>Need/Updating Password</fullName>
            </value>
            <value>
                <fullName>Portal Cards</fullName>
            </value>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>Deferrals/Incentives</fullName>
                <label>Incentives</label>
            </value>
            <value>
                <fullName>Gathering Contact Info</fullName>
            </value>
            <value>
                <fullName>Updating Contact Info</fullName>
            </value>
            <value>
                <fullName>Campaign Setup</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Activate Account</fullName>
            </value>
            <value>
                <fullName>Customer Education</fullName>
            </value>
            <value>
                <fullName>Line Provisioning</fullName>
            </value>
            <value>
                <fullName>Requesting</fullName>
            </value>
            <value>
                <fullName>Set Permissions</fullName>
            </value>
            <value>
                <fullName>SR Huddle</fullName>
            </value>
            <value>
                <fullName>SR Notify</fullName>
            </value>
            <value>
                <fullName>Sync Filter Adjustment</fullName>
            </value>
            <value>
                <fullName>Template Adjustment</fullName>
            </value>
            <value>
                <fullName>Updating</fullName>
            </value>
            <value>
                <fullName>Platform Down</fullName>
            </value>
            <value>
                <fullName>Admin Privileges</fullName>
            </value>
            <value>
                <fullName>Database Connections</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Sync Filters</fullName>
            </value>
            <value>
                <fullName>System Resources</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low CSAT/RSAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>