force-app/main/default/objects/Case/fields/PRT_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>PRT_Completed_Date__c</fullName>
    <label>PRT Completed Date</label>
    <type>DateTime</type>
</CustomField>