force-app/main/default/objects/Case/fields/Reporter_email__c.field-meta.xml
<CustomField>
    <fullName>Reporter_email__c</fullName>
    <label>Reporter email</label>
    <type>Email</type>
</CustomField>