force-app/main/default/objects/Case/fields/Reporter_name__c.field-meta.xml
<CustomField>
    <fullName>Reporter_name__c</fullName>
    <label>Reporter name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>