force-app/main/default/objects/Case/fields/Request_del__c.field-meta.xml
<CustomField>
    <fullName>Request_del__c</fullName>
    <description>Billing Services Request description for the case.</description>
    <inlineHelpText>Billing Services description of the Case Request.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Agreement &amp; Renewals</fullName>
            </value>
            <value>
                <fullName>How-To</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>