force-app/main/default/objects/Case/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <label>Resolution Description</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>