force-app/main/default/objects/Case/fields/Same_Day_Settings__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Settings__c</fullName>
    <description>Checks the box if the Custom settings were completed on the same day as when it was scheduled for</description>
    <formula>DATEVALUE( Custom_Settings_Scheduled_For__c ) = DATEVALUE ( Custom_Settings_Completed__c )</formula>
    <label>Same Day Settings</label>
    <type>Checkbox</type>
</CustomField>