force-app/main/default/objects/Case/fields/Same_Day_Sync_Install__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Sync_Install__c</fullName>
    <description>Checks if the sync install was completed on the same day it was scheduled for</description>
    <formula>DATEVALUE( Sync_Install_Scheduled_For__c ) =  DATEVALUE( Sync_Install_Completed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Day Sync Install</label>
    <type>Checkbox</type>
</CustomField>