force-app/main/default/objects/Case/fields/Same_Day_Training__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Training__c</fullName>
    <description>Checks if the training was completed the same day it was scheduled for</description>
    <formula>DATEVALUE( Training_Scheduled_For__c ) =  DATEVALUE( Training_Completed__c )</formula>
    <label>Same Day Training</label>
    <type>Checkbox</type>
</CustomField>