force-app/main/default/objects/Case/fields/Scheduler_Rep__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduler Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scheduler_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>