force-app/main/default/objects/Case/fields/Spoke_with_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Spoke_with_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this when you have spoken with the decision maker to assess their Churn Risk</inlineHelpText>
    <label>Spoke with Decision Maker</label>
    <type>Checkbox</type>
</CustomField>