force-app/main/default/objects/Case/fields/SR_Portal_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>SR_Portal_Completed_Date__c</fullName>
    <label>SR Portal Completed Date</label>
    <type>DateTime</type>
</CustomField>