force-app/main/default/objects/Case/fields/SR_Portal_Completed_Method__c.field-meta.xml
<CustomField>
    <fullName>SR_Portal_Completed_Method__c</fullName>
    <label>SR Portal Completed Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-on-One</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>