force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Made Contact</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
            <value>
                <fullName>Sync Scheduled</fullName>
            </value>
            <value>
                <fullName>Sync Installed</fullName>
            </value>
            <value>
                <fullName>Training Scheduled</fullName>
            </value>
            <value>
                <fullName>Training Completed</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Resolving Issues</fullName>
            </value>
            <value>
                <fullName>Made Offer</fullName>
            </value>
            <value>
                <fullName>Sent Addendum</fullName>
            </value>
            <value>
                <fullName>Offer Rejected</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>