force-app/main/default/objects/Case/fields/Subject_for_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_Surveys__c</fullName>
    <description>Used in Surveys when the Subject is too long.</description>
    <formula>Left( Subject , 65 )</formula>
    <label>Subject for Surveys</label>
    <type>Text</type>
</CustomField>