force-app/main/default/objects/Case/fields/Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_ID__c</fullName>
    <description>This was created so we can view the Subscriber ID from a List View</description>
    <formula>Account.Subscriber_ID__c</formula>
    <inlineHelpText>This is the Subscriber ID of the Account</inlineHelpText>
    <label>Subscriber ID</label>
    <type>Text</type>
</CustomField>