force-app/main/default/objects/Case/fields/Success_Coach__c.field-meta.xml
<CustomField>
    <fullName>Success_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>