force-app/main/default/objects/Case/fields/Success_Coach_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Success_Coach_Round_Robin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Success Coach Round Robin</label>
    <referenceTo>CS_Round_Robin__c</referenceTo>
    <relationshipLabel>Cases (Success Coach Round Robin)</relationshipLabel>
    <relationshipName>Onboarding_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>