force-app/main/default/objects/Case/fields/Sugar_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Case_Number__c</fullName>
    <inlineHelpText>This is the Case number in Sugar for your reference.</inlineHelpText>
    <label>Sugar Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>