force-app/main/default/objects/Case/fields/Sugar_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Created_By__c</fullName>
    <label>Sugar Created By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>