force-app/main/default/objects/Case/fields/Sugar_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_Date__c</fullName>
    <label>Sugar Modified Date</label>
    <type>DateTime</type>
</CustomField>