force-app/main/default/objects/Case/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto checks when a case is closed to ensure a contact only receives one survey per case closed</description>
    <inlineHelpText>Has a Survey been sent out?</inlineHelpText>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>