force-app/main/default/objects/Case/fields/Survey_to_be_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_to_be_Sent__c</fullName>
    <label>Survey to be Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fast Track Survey</fullName>
            </value>
            <value>
                <fullName>EBR Case Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>