force-app/main/default/objects/Case/fields/Sync_Case_Account__c.field-meta.xml
<CustomField>
    <fullName>Sync_Case_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Case Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Cases</relationshipLabel>
    <relationshipName>Sync_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>