force-app/main/default/objects/Case/fields/Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Message__c</fullName>
    <inlineHelpText>Document the exact error message</inlineHelpText>
    <label>Sync Error Message</label>
    <type>TextArea</type>
</CustomField>