force-app/main/default/objects/Case/fields/Sync_Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Stack_Trace__c</fullName>
    <inlineHelpText>Document the exact error stack trace</inlineHelpText>
    <label>Sync Error Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>