force-app/main/default/objects/Case/fields/Sync_Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Type__c</fullName>
    <label>Sync Error Type</label>
    <type>TextArea</type>
</CustomField>