force-app/main/default/objects/Case/fields/Sync_Install_Class__c.field-meta.xml
<CustomField>
    <fullName>Sync_Install_Class__c</fullName>
    <formula>IF( NOT( ISNULL ( Sync_Install_Completed__c )), &#39;complete&#39;, IF( NOW() - CreatedDate &gt;  10, &#39;late&#39;, if( NOW() - CreatedDate &gt; 4, &#39;atrisk&#39;,  &#39;incomplete&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Install Class</label>
    <type>Text</type>
</CustomField>