force-app/main/default/objects/Case/fields/Sync_Install_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sync_Install_Completed__c</fullName>
    <label>Sync Install Completed</label>
    <type>DateTime</type>
</CustomField>