force-app/main/default/objects/Case/fields/Sync_Install_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Install_Scheduled__c</fullName>
    <label>Sync Install Scheduled</label>
    <type>DateTime</type>
</CustomField>