force-app/main/default/objects/Case/fields/Sync_Install_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Sync_Install_Scheduled_For__c</fullName>
    <label>Sync Install Scheduled For</label>
    <type>DateTime</type>
</CustomField>