force-app/main/default/objects/Case/fields/Sync_Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Install_Type__c</fullName>
    <label>Sync Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Rapid Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>