force-app/main/default/objects/Case/fields/Sync_Installed_Location__c.field-meta.xml
<CustomField>
    <fullName>Sync_Installed_Location__c</fullName>
    <label>Sync Installed Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appdata</fullName>
            </value>
            <value>
                <fullName>ProgramData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>