force-app/main/default/objects/Case/fields/Sync_Running_as_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Sync_Running_as_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Running as Administrator</label>
    <type>Checkbox</type>
</CustomField>