force-app/main/default/objects/Case/fields/Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment__c</fullName>
    <formula>text(Account.Team_Assignment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Assignment</label>
    <type>Text</type>
</CustomField>