force-app/main/default/objects/Case/fields/Tech_Rep_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Tech_Rep_Round_Robin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Round Robin ID to give us total number of Open sync cases</description>
    <label>Tech Rep Round Robin</label>
    <referenceTo>CS_Round_Robin__c</referenceTo>
    <relationshipLabel>Sync Cases</relationshipLabel>
    <relationshipName>Sync_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>