force-app/main/default/objects/Case/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Monitor</fullName>
            </value>
            <value>
                <fullName>Active Push</fullName>
            </value>
            <value>
                <fullName>Active Review</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Birthdays</fullName>
            </value>
            <value>
                <fullName>Contract Addendum</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Eyewear</fullName>
            </value>
            <value>
                <fullName>Filters</fullName>
            </value>
            <value>
                <fullName>General Training</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Local Listing</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>New Integration</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Patient Manager</fullName>
            </value>
            <value>
                <fullName>PatientReach</fullName>
            </value>
            <value>
                <fullName>PatientView</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>SmileDash</fullName>
            </value>
            <value>
                <fullName>Social Networking</fullName>
            </value>
            <value>
                <fullName>Surveys</fullName>
            </value>
            <value>
                <fullName>Sync Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>