force-app/main/default/objects/Case/fields/Training_Class__c.field-meta.xml
<CustomField>
    <fullName>Training_Class__c</fullName>
    <formula>IF( NOT( ISNULL (Training_Completed__c)), 
  &#39;complete&#39;, 
  IF( NOW() - CreatedDate &gt;  10, &#39;late&#39;, 
    IF( NOW() - CreatedDate &gt; 5, 
      &#39;atrisk&#39;,  
      &#39;incomplete&#39;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Class</label>
    <type>Text</type>
</CustomField>