force-app/main/default/objects/Case/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <description>The date and time the customer attended the webinar</description>
    <label>Training Completed</label>
    <type>DateTime</type>
</CustomField>