force-app/main/default/objects/Case/fields/Training_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Training_Scheduled__c</fullName>
    <label>X-Training Scheduled - Don&#39;t Use</label>
    <type>DateTime</type>
</CustomField>