force-app/main/default/objects/Case/fields/Training_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Training_Scheduled_For__c</fullName>
    <label>Training Scheduled For</label>
    <type>DateTime</type>
</CustomField>