force-app/main/default/objects/Case/fields/Trusted_Sites_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Sites_Set_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trusted Sites Set up</label>
    <type>Checkbox</type>
</CustomField>