force-app/main/default/objects/Case/fields/tz__Local_Time_24_Short__c.field-meta.xml
<CustomField>
    <fullName>tz__Local_Time_24_Short__c</fullName>
    <description>Shows the current local time (without date) of the Contact/Account associated with the Case in 24-hr format.</description>
    <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time_24_Short__c, Account.tz__Local_Time_24_Short__c)</formula>
    <inlineHelpText>Shows the local time (without date) of the Contact associated with the Case in 24-hr format.</inlineHelpText>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>