force-app/main/default/objects/Case/fields/tz__Local_Time__c.field-meta.xml
<CustomField>
    <fullName>tz__Local_Time__c</fullName>
    <description>Shows the current local time of the Contact/Account associated with the Case.</description>
    <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Local_Time__c, Account.tz__Local_Time__c)</formula>
    <inlineHelpText>Shows the local time of the Contact associated with the Case.</inlineHelpText>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>