force-app/main/default/objects/Case/fields/tz__Timezone_Formula__c.field-meta.xml
<CustomField>
    <fullName>tz__Timezone_Formula__c</fullName>
    <description>Current timezone abbreviation (PST, EST,etc..) of the Contact/Account associated with the Case.</description>
    <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Timezone__c, Account.tz__Timezone__c)</formula>
    <inlineHelpText>Timezone abbreviation (PST, EST,etc..) of the Contact associated with the Case.</inlineHelpText>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>