force-app/main/default/objects/Case/fields/tz__Timezone_Full__c.field-meta.xml
<CustomField>
    <fullName>tz__Timezone_Full__c</fullName>
    <description>Full timezone name of the Contact/Account associated with the Case.</description>
    <formula>IF(Contact.tz__Timezone__c != null, Contact.tz__Timezone_Full__c, Account.tz__Timezone_Full__c)</formula>
    <inlineHelpText>Full timezone name of the Contact associated with the Case.</inlineHelpText>
    <label>Timezone (Full)</label>
    <type>Text</type>
</CustomField>